prevent overlaps in tree manager

--- a/style.less
+++ b/style.less
@@ -9,6 +9,8 @@
     .tree_media {
         width: 49%;
         float: left;
+        overflow-wrap: break-word;
+        overflow: hidden;
     }
 
     .controls {
